--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ group = "thermalfoundation"
 archivesBaseName = "ThermalFoundation"
 
 minecraft {
-    version = "1.7.10-10.13.4.1448"
+    version = "1.7.10-10.13.4.1614-1.7.10"
     runDir = "eclipse/assets"
 }
 
